add some architecture and development documents for linkis 1.0